修改web.xml, 增加首页跳转

--- a/hrm_ssm/WebRoot/WEB-INF/web.xml
+++ b/hrm_ssm/WebRoot/WEB-INF/web.xml
@@ -20,7 +20,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>springmvc</servlet-name>
-    <url-pattern>/</url-pattern>
+    <url-pattern>*.do</url-pattern>
   </servlet-mapping>
   <filter>
     <filter-name>characterEncodingFilter</filter-name>
