--- a/hrm_ssm/WebRoot/WEB-INF/web.xml
+++ b/hrm_ssm/WebRoot/WEB-INF/web.xml
@@ -5,7 +5,7 @@
   </listener>
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>/WEB-INF/applicationContext*.xml</param-value>
+    <param-value>/WEB-INF/applictionContext*.xml</param-value>
   </context-param>
   <servlet>
     <servlet-name>springmvc</servlet-name>
@@ -20,7 +20,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>springmvc</servlet-name>
-    <url-pattern>*.do</url-pattern>
+    <url-pattern>/</url-pattern>
   </servlet-mapping>
   <filter>
     <filter-name>characterEncodingFilter</filter-name>
